--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/animated-tabbar": "^0.2.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "expo": "~37.0.3",
+    "expo-location": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
@@ -22,9 +24,9 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
-    "rn-fetch-blob": "^0.12.0",
-    "expo-location": "~8.1.0"
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
