--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "rn-fetch-blob": "^0.12.0",
-    "expo-image-picker": "~8.1.0"
+    "expo-image-picker": "~8.1.0",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
